--- a/UserManagementSystem/Server/UserManagementSystem.Server.csproj
+++ b/UserManagementSystem/Server/UserManagementSystem.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorStrap" Version="5.1.102.51923" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.7" />
   </ItemGroup>
 
