--- a/UserManagementSystem/Client/UserManagementSystem.Client.csproj
+++ b/UserManagementSystem/Client/UserManagementSystem.Client.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared\UserManagementSystem.Shared.csproj" />
+    <PackageReference Include="BlazorStrap" Version="5.1.102.51923" />
   </ItemGroup>
 
   <ItemGroup>
