--- a/UserManagementSystem/Server/UserManagementSystem.Server.csproj
+++ b/UserManagementSystem/Server/UserManagementSystem.Server.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="BlazorStrap" Version="5.1.102.51923" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.7" />
+    <PackageReference Include="MySql.Data" Version="8.0.33" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,5 +17,8 @@
     <ProjectReference Include="..\Shared\UserManagementSystem.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="Models\**\*.cs" />
+  </ItemGroup>
 
 </Project>
