--- a/UserManagementSystem/Server/UserManagementSystem.Server.csproj
+++ b/UserManagementSystem/Server/UserManagementSystem.Server.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Compile Include="Models\**\*.cs" />
+    <Compile Include="Services\**\*.cs" />
   </ItemGroup>
 
 </Project>
