--- a/UserManagementSystem/Server/UserManagementSystem.Server.csproj
+++ b/UserManagementSystem/Server/UserManagementSystem.Server.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="BlazorStrap" Version="5.1.102.51923" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.7" />
     <PackageReference Include="MySql.Data" Version="8.0.33" />
+    <PackageReference Include="MySqlConnector" Version="2.2.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
