--- a/UserManagementSystem/Client/UserManagementSystem.Client.csproj
+++ b/UserManagementSystem/Client/UserManagementSystem.Client.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Shared\UserManagementSystem.Shared.csproj" />
     <PackageReference Include="BlazorStrap" Version="5.1.102.51923" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
