Adding users dynamically from API response (and changing some response codes)

--- a/UserManagementSystem/Client/UserManagementSystem.Client.csproj
+++ b/UserManagementSystem/Client/UserManagementSystem.Client.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Shared\UserManagementSystem.Shared.csproj" />
     <PackageReference Include="BlazorStrap" Version="5.1.102.51923" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
